@@ -2,6 +2,7 @@ June 2010 3.1.0
   - Asterisk voicemail support
   - new hosts module for user accounts to define valid login workstations (replaces inetOrgPerson schema hack) (2951116)
   - PDF editor: descriptive fields
+  - lamdaemon: sudo entry needs to be changed to ".../lamdaemon.pl *"
   - LAM Pro
    -> custom scripts: new options to hide executed commands and define if output is HTML or plain text
   - fixed bugs:
